crates/swc_ecma_parser/tests/test262-error-references/fail/fe285bda427ecdfa.js.stderr
error: Expected a decimal digit
 --> $DIR/tests/test262-parser/fail/fe285bda427ecdfa.js:1:5
  |
1 | 1.e+
  |     ^

